--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,15 @@
 {
-  "extends": "@tsconfig/react-native/tsconfig.json"
+  "extends": "@tsconfig/react-native/tsconfig.json",
+  "compilerOptions": {
+    "strict": true,
+    "baseUrl": ".",
+    "paths": {
+      "@app": ["src/app"],
+      "@pages": ["src/pages"],
+      "@widgets": ["src/widgets"],
+      "@features": ["src/features"],
+      "@entities": ["src/entities"],
+      "@shared": ["src/shared"]
+    }
+  }
 }
