feat(app): add axios, open ai api

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
       "@widgets": ["src/widgets"],
       "@features": ["src/features"],
       "@entities": ["src/entities"],
-      "@shared": ["src/shared"]
+      "@shared/*": ["src/shared/*"]
     }
   }
 }
